--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <properties>
         <java.version>1.8</java.version>
         <spring.batch.job.enabled>false</spring.batch.job.enabled>
+        <dockerfile-maven-version>1.4.10</dockerfile-maven-version>
     </properties>
 
 
@@ -131,6 +132,14 @@
         </plugin>
 
         </plugins>
+
+        <extensions>
+            <extension>
+                <groupId>com.spotify</groupId>
+                <artifactId>dockerfile-maven-plugin</artifactId>
+                <version>1.4.6</version>
+            </extension>
+        </extensions>
     </build>
 
 
