--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.url=jdbc:h2:file:./data/demo
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+server.port=8080
